--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
     }
 </style>
 <head>
+    <meta name="google-site-verification" content="lfIrmoY3iE5NyOPU1hvfM_Ax3qKI6YGEiqqRGUtuTvs" />
     <title>Leo BURETTE</title>
 </head>
 <body>
