--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     html{
         height: 100vh;
         left: 0;
+        user-select: none; /* Standard syntax */
     }
     /* --- Title --- */
     body {
